# siyi_sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SIYI_SDK_PROTOCOL.txt  cameras.py  install_gst_dependencies.sh  pyproject.toml  pytest.ini  siyi_message.py  siyi_sdk.py
.claude/agents/: 01_scaffolding.md  02_protocol_layer.md  03_transport_layer.md  04_command_layer.md  05_client_api.md  06_tests_and_integration.md  07_docs_and_release.md  08_final_qa.md  09_video_streaming.md
.github/workflows/: ci.yml  release.yml
docs/: WEB_UI.md  media_http_api.md  protocol.md  quickstart.md  streaming.md  video_streaming_plan.md
examples/: README.md  attitude_control_loop.py  camera_capture.py  encoding_params.py  focus_control.py  gimbal_modes.py  gimbal_rotation.py  gimbal_scan.py  laser_ranging.py  rtsp_gstreamer.py  rtsp_opencv_new_gen.py  rtsp_opencv_old_gen.py  rtsp_record.py  rtsp_sub_stream.py  rtsp_with_control.py  set_attitude.py  single_axis_control.py  soft_reboot.py  subscribe_attitude_stream.py  system_info.py  thermal_imaging.py  thermal_spot_temperature.py  udp_heartbeat.py  zoom_control.py
scripts/: add_copyright.py
siyi_sdk/: __init__.py  client.py  constants.py  convenience.py  exceptions.py  logging_config.py  media.py  models.py
siyi_sdk/commands/: __init__.py  ai.py  attitude.py  camera.py  debug.py  focus.py  gimbal.py  laser.py  rc.py  system.py  thermal.py  video.py  zoom.py
siyi_sdk/protocol/: __init__.py  crc.py  frame.py  parser.py
siyi_sdk/stream/: __init__.py  aiortsp_backend.py  base.py  gstreamer_backend.py  models.py  opencv_backend.py  stream.py
siyi_sdk/transport/: __init__.py  base.py  mock.py  serial.py  tcp.py  udp.py
tests/: conftest.py  test_client.py  test_constants.py  test_convenience.py  test_exceptions.py  test_format_sd_card.py  test_get_encoding_param.py  test_hooks.py  test_logging.py  test_models.py  test_set_encoding_param.py  test_soft_reboot.py
tests/benchmarks/: __init__.py  results.json  test_parser_throughput.py
tests/commands/: __init__.py  test_ai_extended.py  test_attitude.py  test_camera_extended.py  test_camera_video.py  test_debug_extended.py  test_focus.py  test_gimbal.py  test_laser.py  test_rc_debug_ai.py  test_system.py  test_thermal.py  test_thermal_extended.py  test_zoom.py
tests/hil/: __init__.py  test_udp_live.py
tests/integration/: __init__.py  test_concurrency.py  test_full_flow.py
tests/property/: __init__.py  test_frame_roundtrip.py  test_parser_fuzz.py
tests/protocol/: __init__.py  test_crc.py  test_frame.py  test_parser.py
tests/stream/: __init__.py  conftest.py  test_aiortsp_backend.py  test_gstreamer_backend.py  test_hil_stream.py  test_models.py  test_opencv_backend.py  test_stream.py
tests/transport/: __init__.py  test_base.py  test_mock.py  test_serial.py  test_tcp.py  test_udp.py
web_ui/: index.html  server.py
web_ui/static/: app.js  style.css
