[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siyi-sdk"
version = "0.5.0"
description = "Async Python SDK for the SIYI Gimbal Camera External SDK Protocol v0.1.1"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SIYI SDK Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "structlog>=24.0,<26",
    "pyserial-asyncio>=0.6,<1",
    "typing-extensions>=4.10",
]

[project.optional-dependencies]
stream         = ["opencv-python>=4.5"]
stream-opencv  = ["opencv-python>=4.5"]
stream-gst     = ["PyGObject>=3.42"]
stream-aiortsp = ["aiortsp>=1.2", "av>=12.0"]
web            = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.7", "opencv-python>=4.5"]

[project.urls]
Homepage = "https://github.com/mzahana/siyi-sdk"
Repository = "https://github.com/mzahana/siyi-sdk"
Changelog = "https://github.com/mzahana/siyi-sdk/blob/main/CHANGELOG.md"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "hypothesis>=6.100,<7",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
    "black>=24.3,<26",
    "pre-commit>=3.7,<5",
    "opencv-python>=4.5",
    "numpy>=1.21",
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = ""

[tool.hatch.envs.test]
dependencies = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "hypothesis>=6.100,<7",
]

[tool.hatch.envs.test.env-vars]
PYTHONPATH = ""

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov=siyi_sdk --cov-report=term-missing {args:tests}"

[tool.hatch.envs.lint]
dependencies = [
    "ruff>=0.5,<1",
    "black>=24.3,<26",
    "mypy>=1.10,<2",
    "numpy>=1.21",
    "opencv-python>=4.5",
]

[tool.hatch.envs.lint.env-vars]
PYTHONPATH = ""

[tool.hatch.envs.lint.scripts]
lint = [
    "ruff check siyi_sdk tests",
    "ruff format --check siyi_sdk tests",
    "black --check siyi_sdk tests",
]
typecheck = "mypy siyi_sdk --strict"
fmt = [
    "ruff format siyi_sdk tests",
    "black siyi_sdk tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "D",
    "ANN",
    "ASYNC",
    "RUF",
]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
strict = true
warn_unreachable = true
disallow_any_generics = true
warn_unused_ignores = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "serial_asyncio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2", "gi", "gi.*", "gi.repository", "gi.repository.*", "aiortsp", "aiortsp.*", "av", "av.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["hil: hardware-in-the-loop tests (skipped by default)"]
addopts = "-ra --strict-markers -p no:launch_testing -p no:launch_testing_ros_pytest_entrypoint"

[tool.coverage.run]
source = ["siyi_sdk"]
branch = true
omit = [
    "siyi_sdk/stream/gstreamer_backend.py",
    "siyi_sdk/stream/aiortsp_backend.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 90
